fix: readability timer

--- a/Frontend/src/pages/countdown/index.css
+++ b/Frontend/src/pages/countdown/index.css
@@ -371,6 +371,9 @@
 
             #timer {
                 margin-left: -6px;
+                .timerBox{
+                    color: var(--txt-hero);
+                }
             }
 
             .cta {
